--- a/Matplotlib-Animation.ipynb
+++ b/Matplotlib-Animation.ipynb
@@ -24,9 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"01_Animation.gif\" style=height:300px;>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AMPLITUDE = 1.5\n",
     "FREQUENZ = 3.0\n",
